tests/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-gate.rs
#[derive_const(Default)] //~ ERROR use of unstable library feature
//~^ ERROR not marked with `#[const_trait]`
pub struct S;

fn main() {}
